# sft-label

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  README.zh-CN.md  pyproject.toml
docs/: agent-guide.md  extension-labeling-guide.md  pass1-extension-labeling-intro.md  sft-label-intro.md
extensions/: README.md  ui_web_analysis_v1.example.yaml
scripts/: benchmark_semantic_clustering.py  benchmark_semantic_clustering_report.md  convert_coderforge.py  convert_commitpackft.py  convert_magicoder.py  download_hf_dataset.py  probe_openai_turn_compat.py  sample_to_sft.py  setup_dashboard_service.py
tests/: test_analyze_unmapped.py  test_artifacts.py  test_cli_adaptive_runtime.py  test_cli_progress.py  test_cli_start.py  test_content_filter_retry.py  test_conversation.py  test_dashboard_explorer.py  test_dashboard_scopes.py  test_dashboard_service.py  test_dashboard_template.py  test_e2e_mock.py  test_export_review.py  test_extension_rarity.py  test_fatal_failure_monitor.py  test_filter.py  test_fixture_accounting.py  test_http_limits.py  test_inline_labels.py  test_inline_pass1.py  test_inline_rows.py  test_inline_scoring.py  test_label_extensions_runtime.py  test_label_extensions_schema.py  test_launcher.py  test_llm_package_imports.py  test_llm_runtime.py  test_optimize_layout.py  test_pass1_adaptive_runtime.py  test_pass1_chunked_reliability.py  test_pass1_progress_windowing.py  test_pipeline_estimation.py  test_pipeline_label_extensions_integration.py  test_preprocessing.py  test_probe_openai_turn_compat.py  test_prompts.py  test_recompute.py  test_scoring.py  (+10 more)
(+171 files in other folders)
